fairway-sf/force-app/main/default/objects/Simulator_Bay__c/Simulator_Bay__c.object-meta.xml
<CustomObject>
    <label>Simulator Bay</label>
    <pluralLabel>Simulator Bays</pluralLabel>
    <description>A physical golf simulator bay: the hardware, launch monitor, and software running in it.</description>
    <nameField>
        <label>Bay Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>