fairway-sf/force-app/main/default/objects/Simulator_Bay__c/fields/Bay_Number__c.field-meta.xml
<CustomField>
    <fullName>Bay_Number__c</fullName>
    <label>Bay Number</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
    <unique>true</unique>
    <description>Physical bay identifier, e.g. "Bay 1", "Bay 2".</description>
</CustomField>