fairway-sf/force-app/main/default/objects/Simulator_Bay__c/fields/Device_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Device_Identifier__c</fullName>
    <label>Device Identifier</label>
    <type>Text</type>
    <length>100</length>
    <description>Bay PC / device identifier used by the local connector agent.</description>
</CustomField>