fairway-sf/force-app/main/default/objects/Simulator_Bay__c/fields/Last_Calibration_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Calibration_Date__c</fullName>
    <label>Last Calibration Date</label>
    <type>Date</type>
</CustomField>