fairway-sf/force-app/main/default/objects/Simulator_Bay__c/fields/Launch_Monitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Launch_Monitor_Type__c</fullName>
    <label>Launch Monitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>TrackMan</fullName><default>false</default><label>TrackMan</label></value>
            <value><fullName>Foresight</fullName><default>false</default><label>Foresight</label></value>
            <value><fullName>Uneekor</fullName><default>false</default><label>Uneekor</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>