fairway-sf/force-app/main/default/objects/Simulator_Bay__c/fields/Simulator_Software__c.field-meta.xml
<CustomField>
    <fullName>Simulator_Software__c</fullName>
    <label>Simulator Software</label>
    <type>Text</type>
    <length>100</length>
    <description>e.g. GSPro, E6 Connect, Creative Golf, ProTee Play, TGC 2019.</description>
</CustomField>