fairway-sf/force-app/main/default/objects/Simulator_Bay__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Available</fullName><default>true</default><label>Available</label></value>
            <value><fullName>In Use</fullName><default>false</default><label>In Use</label></value>
            <value><fullName>Maintenance</fullName><default>false</default><label>Maintenance</label></value>
            <value><fullName>Offline</fullName><default>false</default><label>Offline</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>